Add toc and some blank lines
Without those blank lines, github won't render the org file correctly.

--- a/pyformat.org
+++ b/pyformat.org
@@ -1,3 +1,19 @@
+
+* 目录                                                                 :toc:
+ - [[#基本格式][基本格式]]
+ - [[#值的转换][值的转换]]
+ - [[#字符串的填充及对齐][字符串的填充及对齐]]
+ - [[#截断长字符][截断长字符]]
+ - [[#截断和填充的结合][截断和填充的结合]]
+ - [[#数字][数字]]
+ - [[#填充数字][填充数字]]
+ - [[#带符号的数字][带符号的数字]]
+ - [[#命名占位符][命名占位符]]
+ - [[#getitem-和-getattr][Getitem 和 Getattr]]
+ - [[#日期时间][日期时间]]
+ - [[#参量化格式][参量化格式]]
+ - [[#自定义对象][自定义对象]]
+
 * 基本格式
 简单的定位格式化可能是最普遍的使用情形。
 
@@ -48,6 +64,7 @@
 :RESULTS:
 'two one'
 :END:
+
 * 值的转换
 新样式的格式函数默认调用对象的 ~__format__()~ 方法作为它的表示。如果你只是想得到 ~str(...)~ 或 ~repr(...)~ 的输出，你可以使用 ~!s~ 或 ~!r~ 转换标记。
 
@@ -101,6 +118,7 @@
 :RESULTS:
 'räpr r\\xe4pr'
 :END:
+
 * 字符串的填充及对齐
 默认情况下，格式化后刚好占用所需的字符数。但是可以将值填充到指定长度。
 
@@ -221,6 +239,7 @@
 :RESULTS:
 'xylop     '
 :END:
+
 * 数字
 当然，还可以对数字进行格式化。
 
@@ -257,6 +276,7 @@
 :RESULTS:
 '3.141593'
 :END:
+
 * 填充数字
 和字符串类似，也可以指定数字的长度
 
@@ -305,6 +325,7 @@
 #+BEGIN_SRC ipython :session :results value drawer
 '{:04d}'.format(42)
 #+END_SRC
+
 * 带符号的数字
 默认情况下只有负数有符号前缀。当然，这可以改变。
 
@@ -378,6 +399,7 @@
 :RESULTS:
 '+  23'
 :END:
+
 * 命名占位符
 两种格式化风格都支持命名占位符。
 
@@ -414,6 +436,7 @@ data = {'first': 'Hodor', 'last': 'Hodor!'}
 :RESULTS:
 'Hodor Hodor!'
 :END:
+
 * Getitem 和 Getattr
 新式格式化在访问嵌套数据结构时具有更大的灵活性。
 
@@ -491,6 +514,7 @@ data = [4, 8, 15, 16, 23, 42]
 :RESULTS:
 'tree: oak'
 :END:
+
 * 日期时间
 新式格式化还允许对象控制它们自己的渲染。这使得比如 datetime 对象可以被行内格式化：
 
